--- a/public/Q1_1stGraded.html
+++ b/public/Q1_1stGraded.html
@@ -1,4 +1,4 @@
 <script>
-  document.write("Hello World");
+  document.write("Hello World! I am Marcus Carandang of 9 - Beryllium, I am very excited to learn more about CS and to get to know my teachers and classmates more! Looking forward to a fun and memorable school year with everyone.");
   
 </script>
