--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
    <h1>Links to Marcus's work!</h1>
    <nav>
     <ul>
+      <li><a href="./public/Q1_1stGraded.html"> Q1 1st Graded</a> 
+      </li> 
       <li><a href="./public/Q11stNGBeCarandang.html"> Q1 1st Non-Graded</a> 
       </li> 
     </ul>
