--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
    <nav>
     <ul>
       <li><a href="./public/Q1_1stGraded.html"> First Exercise! </a> </li>
+      <li><a href="./public/Q12GBeCarandang.html"> Second Graded Exercise! </a> 
+</li> 
+
     </ul>
    </nav>
   </section>
