--- a/public/Q1_1stGraded.html
+++ b/public/Q1_1stGraded.html
@@ -1,4 +1,16 @@
-<script>
-  document.write("Hello World! I am Marcus Carandang of 9 - Beryllium, I am very excited to learn more about CS and to get to know my teachers and classmates more! Looking forward to a fun and memorable school year with everyone.");
-  
-</script>
+<html>
+<head>
+  <title>MARCUS CARANDANG Portfolio</title>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+</head>
+<body>
+  <section class="w3-container">
+   <h1>Links to Marcus's work!</h1>
+   <nav>
+    <ul>
+      <li><a href="./public/Q1_1stGraded.html"> First Exercise! </a> </li>
+    </ul>
+   </nav>
+  </section>
+</body>
+</html>
