--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
    <nav>
     <ul>
       <li><a href="./public/Q1_1stGraded.html"> First Exercise! </a> </li>
-      <li><a href="./public/Q12GBeCarandang.html"> Second Graded Exercise! </a> 
-</li> 
       <li><a href="./public/Q11stNGBeCarandang.html"> Q1 1st Non-Graded</a> 
-      </li> 
+      </li>
+      <li><a href="./public/Q12GBeCarandang.html"> Second Graded Exercise! </a> 
+</li>  
+      <li><a href="./public/Q13GBeCarandang.html"> Third Graded Exercise! </a> 
+</li>
     </ul>
    </nav>
   </section>
